<resources>
    <string name="app_name">VideoToPhoto123</string>
    <string name="function">Function</string>
    <string name="select_video">Select Video</string>
    <string name="Gallery">Gallery</string>
    <string name="Setting">Setting</string>
    <string name="slide_show_maker"> Slideshow maker</string>
    <string name="folder_name">Folder Name</string>
    <string name="file_format">File Format</string>
    <string name="quality">Quality</string>
    <string name="size">Size</string>
    <string name="high">High</string>
    <string name="x">1x</string>
    <string name="jpg">JPG</string>
    <string name="png">PNG</string>
    <string name="best">Best</string>
    <string name="very_high">Very high</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="size_0.5x">0.5x</string>
    <string name="size_1x">1x</string>
    <string name="size_1.5x">1.5x</string>
    <string name="size_2x">2x</string>
    <string name="size_3x">3x</string>
    <string name="quick_capture">Quick capture</string>
    <string name="time_capture">Time capture</string>
    <string name="photos">Photos</string>
    <string name="snap_event">Snap every 2.0 second</string>
    <string name="take_photo">Take photo</string>
    <string name="setting_snap"> Setting snap event</string>
    <string name="enter_time">Enter Time (In Seconds)</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="time">00:00:00</string>
    <string name="image_details">Image Details</string>
    <string name="local">Location</string>
    <string name="image_resolution">Image resolution</string>
    <string name="edit_image">Edit image</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="message_delete">Are you sure?</string>
    <string name="cut">Cut</string>
    <string name="text">Text</string>
    <string name="sticker">Sticker</string>
    <string name="paint">Paint</string>
    <string name="size_frame11">1:1</string>
    <string name="size_frame23">2:3</string>
    <string name="size_frame46">4:6</string>
    <string name="size_frame34">3:4</string>
    <string name="size_frame43">4:3</string>
    <string name="size_frame31">3:1</string>
    <string name="brush">Brush</string>
    <string name="opacity">Opacity</string>
    <string name="waiting_snap">Must not exceed the length of the video</string>
    <string name="option">Option</string>
    <string name="rename">Rename</string>
    <string name="open">Open</string>
    <string name="details">Details</string>
    <string name="error">Error</string>
    <string name="file_name">File name</string>
    <string name="file_size">File size</string>
    <string name="date">Date</string>
    <string name="path">Path</string>
    <string name="notify">Notify</string>
    <string name="crop">Crop</string>
    <string name="status_quotes">Status Quotes</string>
    <string name="author">Author</string>
    <string name="private_policy">Private Policy</string>
    <string name="email">Email</string>
    <string name="author_name">VINH VO</string>
    <string name="link">https://codefresher.vn/</string>
    <string name="email_address">vinhvohoang1410@gmail.com</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="snap_every">Snap Every </string>
    <string name="sec">Sec</string>
</resources>