<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_300sdp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@color/cornflower_blue"
            android:gravity="center"
            android:text="@string/option"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/buttonOpenVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open" />

        <Button
            android:id="@+id/buttonRenameVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rename" />

        <Button
            android:id="@+id/buttonDeleteVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete" />

        <Button
            android:id="@+id/buttonShareVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share" />

        <Button
            android:id="@+id/buttonDetailsVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>