<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_300sdp"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quality"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageDeleteDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_delete" />

    <RadioGroup
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_boder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <RadioButton
            android:id="@+id/radioBest"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/best" />

        <RadioButton
            android:id="@+id/radioVeryHigh"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/very_high" />

        <RadioButton
            android:id="@+id/radioHigh"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/high" />

        <RadioButton
            android:id="@+id/radioMedium"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/radioLow"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/low" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>