<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_10sdp"
    tools:context=".Setting">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_40sdp"
        android:gravity="center_vertical"
        android:text="@string/file_format"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtFileFormat"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:gravity="center|center_vertical"
        android:text="@string/quality"
        android:textColor="@color/blue"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_40sdp"
        android:gravity="center_vertical"
        android:text="@string/quality"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/txtQuality"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:gravity="center"
        android:text="@string/high"
        android:textColor="@color/blue"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFileFormat" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_40sdp"
        android:gravity="center_vertical"
        android:text="@string/size"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/txtSize"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:gravity="center"
        android:text="@string/x"
        android:textColor="@color/blue"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtQuality" />
</androidx.constraintlayout.widget.ConstraintLayout>