<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_300sdp"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageDeleteDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_delete" />

    <RadioGroup
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_boder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12">

        <RadioButton
            android:id="@+id/radioSize05"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/size_0.5x" />

        <RadioButton
            android:id="@+id/radioSize1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/size_1x" />

        <RadioButton
            android:id="@+id/radioSize15"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/size_1.5x" />

        <RadioButton
            android:id="@+id/radioSize2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/size_2x" />

        <RadioButton
            android:id="@+id/radioSize3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/size_3x" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>