<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_300sdp"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="30sp"
        android:text="@string/file_format"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageDeleteDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_delete" />

    <RadioGroup
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_boder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <RadioButton
            android:id="@+id/radioJPG"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:checked="false"
            android:text="@string/jpg"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioPNG"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/png"
            android:textSize="18sp" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>