<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VideoToPhoto">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <RadioButton
                android:id="@+id/radioQuickCapture"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/radio_flat_selector"
                android:button="@android:color/transparent"
                android:checked="true"
                android:gravity="center"
                android:text="@string/quick_capture"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/radioTimeCapture"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/radio_flat_selector"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/time_capture"
                android:textColor="@color/black" />

        </RadioGroup>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp">

            <VideoView
                android:id="@+id/videoViewPlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center" />

            <ImageView
                android:id="@+id/imageEventVideo"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center"
                android:visibility="visible"
                app:srcCompat="@drawable/ic_baseline_play_arrow_24" />
        </FrameLayout>

        <TextView
            android:id="@+id/txtVideoName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/select_video"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:text="@string/time" />

            <TextView
                android:id="@+id/txtCurrentTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/time" />
        </RelativeLayout>

<!--        <org.florescu.android.rangeseekbar.RangeSeekBar-->
<!--            android:id="@+id/rangeSeekBarVideo"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="@dimen/_10sdp"-->
<!--            android:background="@color/blue" />-->
        <SeekBar

            android:id="@+id/idSeekBarVideo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"
            android:progressBackgroundTint="@color/blue" />

        <it.sephiroth.android.library.rangeseekbar.RangeSeekBar
            android:id="@+id/rangeSeekBar"
            style="@style/Base.Sephiroth.Widget.RangeSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="@+id/textView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/photos"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewImage"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtCaptureEvery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/snap_event"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>